split/time-machine.css
.timestamp {
    background-color: #fdfff8;
    vertical-align: top;
}
.ts-date {
    color: #1199cb;
}
.ts-time {
    color: #1199cb80;
    font-size: small;
}
.relative-id {
    color: #bb8a77;
    font-size: small;
}
table {
    border-spacing: 0 0;
    border-collapse: collapse;
}
th {
    top: 0;
    background-color: #f2ffeb;
    position: sticky;
    border: 1px solid #d3e8ca;
    text-align: left;
}
td {
    vertical-align: top;
}
.drag-table-handle {
    border: 1px solid #adc9a2;
    border-radius: 3px;
    background-color: #d3e8ca;
    text-align: center;
    margin: 2px;
    box-shadow: 2px 2px 3px lightgrey;
}
.drag-width {
    border-radius: 3px;
}
.add-group-button {
    margin: 2px;
    box-shadow: 2px 2px 3px lightgrey;
}
.sort-date {
    padding: 0 20px 0 0;
}
.sort-place {
    color: #767699;
    background-color: #e0eed8;
    border: 1px solid #aecca0;
    font-size: small;
    font-family: sans-serif;
}
.between-cell {
    background-color: #fdfff8;
    border: 1px dashed #f1edea;
}

.between-cell.odd-ts, .timestamp.odd-ts {
    background-color: #eff3e8;
    border: 1px dashed #e5dcd5;
}

.empty-cell {
    border: 1px dashed #f8f7f5;
}

.entry {
    border: 1px solid #ccb475;
    background-color: #fff8eb;
}

.entry.odd-ts {
    background-color: #f5e8d7;
}

.entry-title {
    color: #015b46;
}

#status {
    color: #7211bb;
}

#details {
    position: absolute;
    background: #faf0e4;
    border: 1px solid #d7c6bf;
    border-radius: 5px;
    box-shadow: 8px 8px 8px lightgray;
    padding: 2px;
    z-index: 100;
}

.contributor {
    color: #8eafae;
}
.old-value {
    color:darkred;
}

.new-value {
    color: green;
}

.delete-value {
    color:red;
}

.change-reason {
    color: #4d7e93;
}

.change-message {
    color: #774d93
}

.old-value > .change-message {
    color: #934d72
}

.new-value > .change-message {
    color: #4d9383
}
.child-rel {
    border: 1px solid grey;
}

.child-rel tr td {
    border: 1px solid lightgrey;
    padding: 4px;
}

.merged-from {
    color: #007580;
}

.note-redundant-subject {
    color: #bea4da;
}
.note-subject {
    color: #400180;
}
.note {
    color: #400180;
}

#tabs > ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #dec49e;
}

.tab {
    float: left;
    border: 1px solid #eee3d3;
}

#tabs > ul > li a:hover {
    background-color: #d5b398;
}

#options-tab {
    float:right;
}

.ui-tabs-active, .ui-tabs-active:hover {
    background-color: #c7966d;
}

#tabs > ul > li > a {
    display: block;
    color: black;
    padding: 8px;
    text-decoration: none;
    text-align: center;
}

#settings {
    padding: 6px;
    margin: 2px 5px 2px 5px;
    background-color: #f3e4d6;
    border: 1px solid #9d8345;
    border-radius: 5px;
    box-shadow: black;
}
#fact-level-radio {
    display: inline;
}
.vertical-divider {
    font-size: 16px;
    color: darkgrey;
}

.ui-widget-header {
    border: 2px solid black;
}

.merge-id {
    border: 1px solid #dccbb5;
    background-color: #eff1da;
}

.merge-id-dup {
    border: 1px solid #dccbb5;
    background-color: #f1e9da;
}

.source-row {
    border: 1px solid #dccbb5;
    background-color: #dae9f1;
}
.end-gx {
    border: 1px solid #dad9ce;
    background-color: #faf8eb
}

.identity-gx {
    border: 1px solid #cedace;
    background-color: #f3f8f3
}
.merge-node {
    border: 1px solid #cedace;
    background-color: #f8f8f3;
}
.note {
    background-color: #fafcf7;
    border: 1px solid #cedace;
    white-space: pre;
}
.selected * {
    background-color: #fcfcaa;
}
.main-row {
    border-bottom: 2px solid #add2ad;
}
.parent {
    color: darkblue;
}
.spouse {
    color: #48008b;
}
.child {
    color: #7a6e00;
}
.fact-type {
    font-size: small;
    color: #5e7283;
}
.date {
    color: darkblue;
    font-size: 14px;
}
.place {
    color: darkgreen;
    font-size: 12px;
}
.value {
    color: #38008b;
    font-size: 14px;
}
.sub-row {
    border-top: 1px dashed grey;
}

.con-holder {
    /* Workaround to get table in td to expand to full height */
    height: 1px;
    /* Prevent 2x2 connector table from causing a row to be double height when there's only 1 line of real text */
    font-size: 1px;
    width: 25px;
}
.connector-table {
    height: 100%;
    width: 100%;
    margin: 0;
    border: none;
    border-spacing: 0;
    border-collapse: collapse;
}
.con-O {
    border: none;
}
.con-I, .con-L {
    border: 2px #cca768;
}
.con-I {
    border-style: none none none dashed;
}
.con-L {
    border-radius: 5px;
    border-style: none none dashed dashed;
}
.group-header {
    background-color: white;
    border-style: none;
    border-bottom: 2px solid #add2ad;
    padding-top: 10px;
}
.bottom-button-row {
    background-color: white;
    border-style: none;
    padding-top: 10px;
}
.group-name {
    display: inline-block;
    margin-left: 10px;
    margin-right: 10px;
}
.close-button {
    display: inline-block;
    vertical-align: top;
    color: darkred;
    background-color: #decfb5;
}
.add-to-group-button {
    display: inline-block;
    vertical-align: top;
    color: darkgreen;
    background-color: #decfb5;
}
.apply-button {
    display: inline-block;
    float: right;
    vertical-align: top;
    color: #731313;
    background-color: #deb6b5;
}
a:link {
    text-decoration: none;
}
a:hover {
    text-decoration: underline;
}
.rt {
    text-align: right;
}
/* Status */
.added,.merge-added {
    color: darkgreen;
}
.changed {
    color: #c29459;
}
.deleted,.merge-deleted {
    color: darkred;
    text-decoration-line: line-through;
}
.merge-orig,.merge-added,.merge-deleted {
    font-style: italic;
    opacity: 50%;
}

.split-table {
    border: 1px darkblue;
}
.split-heading {
    font-weight: bold;
    border: 1px solid #cedace;
    border-top: 2px solid #9ab79a;
    background-color: #f3f8f3
}
.split-children {
    font-weight: bold;
    border: 1px solid #cedace;
    border-top: 1px solid red;
    background-color: #f3f8f3
}
.split-extra {
    border: 1px solid #cedace;
    background-color: #f4fcfc;
    white-space: nowrap;
}

.dir-button {
    /*background-color: #f3f8f3;*/
    /*border: 1px solid #9ab79a;*/
}
.collapse-button {
    margin-left: 10px;
    font-family: monospace;
}

.tooltip {
    position: relative;
}

.tooltip .tooltiptext {
    visibility: hidden;
    background-color: lightgrey;
    color: #000;
    text-align: left;
    border-radius: 6px;
    padding: 5px;
    position: absolute;
    z-index: 1;
    bottom: 150%;
    left: 20px;
}

.tooltip .tooltiptext::after {
    content: "";
    position: absolute;
    top: 100%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: lightgrey transparent transparent transparent;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
}

.undecided {
    background-color: #fdfdf2;
}
.help, .help ul li {
    color: #400180;
    background-color: #FFFFFF;
}

